hphp/hack/test/typecheck/using/using_bad_syntax.php.exp
File "using_bad_syntax.php", line 15, characters 5-33:
Parse error: function-scoped 'using' statement not supported in a block scope (Parsing[1002])
